--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/restful_users
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
-
-security.token.secret=çlfakdsjl4kj42lkj3lfkjsdf@!DFsf
+security.token.secret=secret
