config: added prometheus and grafana dashboards

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 security.token.secret=secret
+management.endpoint.enabled-by-default=false
+management.endpoints.web.exposure.includes=health,metrics,prometheus
+management.endpoint.health.enabled=true
+management.endpoint.health.show-details=always
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
