feat: added env variables to prod.yml

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.application.name=restful-api-users-java
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/restful_users
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 security.token.secret=secret
 management.endpoint.enabled-by-default=false
