--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.application.name=restful-api-users-java
+# Allow all origins, methods, and headers
+spring.web.cors.allowed-origin-patterns=https://crud.shop
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-security.token.secret=secret
+security.token.secret=${TOKEN_SECRET}
 management.endpoint.enabled-by-default=false
 management.endpoints.web.exposure.includes=health,metrics,prometheus
 management.endpoint.health.enabled=true
