--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Remove container
         run: docker rm -f java_users_api_rest
       - name: Run docker container Java users REST API
-        run: docker run -d -p 8080:8080 --shm-size=1g -e DATABASE_URL=${{secrets.DATABASE_URL}} -e DATABASE_PASSWORD='${{secrets.DATABASE_PASSWORD}}' -e DATABASE_USERNAME=${{secrets.DATABASE_USERNAME}} -e DATABASE_NAME=${{secrets.DATABASE_NAME}} --name java_users_api_rest joaov1ct0r/java_users_api_rest
+        run: docker run -d -p 8080:8080 --shm-size=1g -e TOKEN_SECRET=${{secrets.TOKEN_SECRET}} -e DATABASE_URL=${{secrets.DATABASE_URL}} -e DATABASE_PASSWORD='${{secrets.DATABASE_PASSWORD}}' -e DATABASE_USERNAME=${{secrets.DATABASE_USERNAME}} -e DATABASE_NAME=${{secrets.DATABASE_NAME}} --name java_users_api_rest joaov1ct0r/java_users_api_rest
