--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -27,9 +27,15 @@ jobs:
     needs: build
     runs-on: self-hosted
     steps:
-      - name: Pull image docker hub
-        run: docker pull joaov1ct0r/java_users_api_rest:latest
       - name: Remove container
         run: docker rm -f java_users_api_rest
+      - name: Remove all stopped containers
+        run: docker container prune -f
+      - name: Remove unused images
+        run: docker image prune -a -f
+      - name: Remove unused volumes
+        run: docker volume prune -f
+      - name: Pull image docker hub
+        run: docker pull joaov1ct0r/java_users_api_rest:latest
       - name: Run docker container Java users REST API
         run: docker run -d -p 8080:8080 --shm-size=1g -e TOKEN_SECRET=${{secrets.TOKEN_SECRET}} -e DATABASE_URL=${{secrets.DATABASE_URL}} -e DATABASE_PASSWORD='${{secrets.DATABASE_PASSWORD}}' -e DATABASE_USERNAME=${{secrets.DATABASE_USERNAME}} -e DATABASE_NAME=${{secrets.DATABASE_NAME}} --name java_users_api_rest joaov1ct0r/java_users_api_rest
