feat: added reset password feature and upload image to user photo

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,29 @@
 spring.application.name=restful-api-users-java
+spring.web.cors.allowed-origin-patterns=http://localhost:3000
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/restful_users
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=YOUR_EMAIL
+spring.mail.password=YOUR_APP_GENERATED_EMAIL_PASSWORD
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 security.token.secret=secret
+
 management.endpoint.enabled-by-default=false
 management.endpoints.web.exposure.includes=health,metrics,prometheus
 management.endpoint.health.enabled=true
 management.endpoint.health.show-details=always
 management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
+
+aws.s3.bucket-name=java-users-rest-api-bucket
+aws.s3.region=us-east-1
+aws.accessKeyId=YOUR_AWS_ACCESS_KEY_ID
+aws.secretKey=YOUR_AWS_SECRET_KEY
