--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 HELP.md
+./src/main/resources/application-dev.properties
+./src/main/resources/application-test.properties
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
