--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=restful-api-users-java
-# Allow all origins, methods, and headers
 spring.web.cors.allowed-origin-patterns=https://crud.shop
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
@@ -8,10 +7,25 @@ spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
+SPRING_PROFILES_ACTIVE=prod
+spring.profiles.active=@active.profile@
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${SPRING_EMAIL}
+spring.mail.password=${SPRING_EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 security.token.secret=${TOKEN_SECRET}
+
 management.endpoint.enabled-by-default=false
 management.endpoints.web.exposure.includes=health,metrics,prometheus
 management.endpoint.health.enabled=true
 management.endpoint.health.show-details=always
 management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
+
+aws.s3.bucket-name=${AWS_S3_BUCKET_NAME}
+aws.s3.region=${AWS_S3_REGION}
+aws.accessKeyId=${AWS_S3_ACCESS_KEY_ID}
+aws.secretKey=${AWS_S3_SECRET_ACCESS_KEY}
