--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
 			<artifactId>mockito-core</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.amazonaws</groupId>
