--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 HELP.md
-./src/main/resources/application-dev.properties
-./src/main/resources/application-test.properties
+src/main/resources
+src/main/resources/application-dev.properties
+src/main/resources/application-test.properties
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
