--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,4 @@
-#version: '3.8'
-
-networks:
-  gv-network:
-    driver: bridge
-volumes:
-  prometheus_data:
-  grafana_data:
+version: '3.8'
 
 services:
   postgres:
@@ -17,3 +10,22 @@ services:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin
       - POSTGRES_DB=restful_users
+    networks:
+      - backend
+
+  api:
+    container_name: restful-api-users-java-api
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      - postgres
+    ports:
+      - 8080:8080
+    env_file:
+      - ./src/main/resources/application-dev.properties
+    networks:
+      - backend
+
+networks:
+  backend:
