--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     container_name: restful-api-users-java-pg
@@ -10,6 +8,8 @@ services:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin
       - POSTGRES_DB=restful_users
+    volumes:
+      - pgdata:/var/lib/postgresql/data
     networks:
       - backend
 
@@ -24,8 +24,13 @@ services:
       - 8080:8080
     env_file:
       - ./src/main/resources/application-dev.properties
+    volumes:
+      - ./src/main/resources/public:/app/uploads
     networks:
       - backend
 
 networks:
   backend:
+
+volumes:
+  pgdata:
